# Python_Custom_WSGI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FINAL_STATUS.md  LINTING.md  README.md  SECURITY_REPORT.md  SERVER_STATUS.md  conftest.py  demo.py  environment.yml  example_usage.py  httptools_example.py  httptools_server.py  lint.py  memory_optimizations.py  multiprocess_server.py  pipelining.py  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements.txt  run_benchmarks.bat  run_simple_benchmark.bat  server_check.py  server_core.py  setup.cfg  setup.py  test_server.py  verify_benchmark.py  verify_benchmarks.bat  wsgi_server.py
.github/workflows/: ci.yml  python-tests.yml
benchmarks/: BENCHMARK_GUIDE.md  README.md  benchmark.py  generate_certs.py  run_benchmarks.py  simple_benchmark.py  verify_claims.py  windows_benchmark.py
benchmarks/results/: simple-benchmark-20250711-031326.json
benchmarks/servers/: __init__.py  custom_http1_server.py  custom_http2_server.py  wsgi_app.py
examples/: demo.py  example_usage.py  httptools_example.py  quick_test.py  secure_server_example.py  ssl_example.py
src/: __init__.py  httptools_server.py
src/core/: __init__.py  http_parser.py  request_handler.py  server_core.py  server_utils.py  (+2 more)
tests/: __init__.py  debug_test.py  run_tests.py  server_check.py  test_http2.py  test_http2_integration.py  test_http2_unittest.py  test_http_protocol.py  test_http_protocol.py.new  test_security.py  test_server.py  test_ssl_utils.py  test_streaming_and_shutdown.py  test_wsgi_compliance.py  test_wsgi_server.py
(+10 files in other folders)
